--- a/templates/reglog.html
+++ b/templates/reglog.html
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-<div class="row">
+<div class="row m-0 p-0">
     <div class="card col-12 offset-md-2 col-md-8 offset-lg-4 col-lg-4 mt-3">
         <form class="card-body row g-3 align-items-center" method="POST" action="{{ request.path }}">
             <h3 class="card-title text-center">{% if register %}Register{% else %}Log In{% endif %}</h3>
