--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
     {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
     {% for category, message in messages %}
-    <div class="row">
+    <div class="row m-0 p-0">
       <h4 class="text-primary bg-info text-center mt-3 {{ category }}">{{ message }}</h4>
     </div>
     {% endfor %}
@@ -76,13 +76,15 @@
     {% endwith %}
   </section>
 
-  {% block body %}{% endblock %}
+  <main class="content">
+  {% block body %}
+  {% endblock %}
+  </main>
 
   <!-- MDB -->
   <script type="text/javascript" src="{{ url_for('static', filename='mdb.min.js') }}"></script>
   <!-- Custom scripts -->
-  <script type="text/javascript">
-  </script>
+  <script type="text/javascript" src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 
 </html>
