--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
     {% if messages %}
     {% for category, message in messages %}
     <div class="row m-0 p-0">
-      <h4 class="text-primary bg-info text-center mt-3 {{ category }}">{{ message }}</h4>
+      <h4 class="alert alert-{{category}} text-center alert-dismissible fade show m-auto">{{ message }}</h4>
     </div>
     {% endfor %}
     {% endif %}
