--- a/templates/base.html
+++ b/templates/base.html
@@ -67,11 +67,11 @@
     <!-- flash messages -->
     {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
+    <div class="row m-0 p-0"></div>
     {% for category, message in messages %}
-    <div class="row m-0 p-0">
-      <h4 class="alert alert-{{category}} text-center alert-dismissible fade show m-auto">{{ message }}</h4>
-    </div>
+      <div class="alert alert-{{category}} text-center">{{ message }}</div>
     {% endfor %}
+    </div>
     {% endif %}
     {% endwith %}
   </section>
