--- a/templates/maintain.html
+++ b/templates/maintain.html
@@ -5,23 +5,20 @@
 
 {% block body %}
 <div class="content">
-  {% if last_entity %}{% set update=True %}{% else %}{% set update=False %}{% endif %}
+  {% if last_record %}{% set update=True %}{% else %}{% set update=False %}{% endif %}
   <div class="row m-0 p-0">
     <form class="card col-12 offset-md-2 col-md-8 offset-lg-3 col-lg-6 my-3" action="{{ request.path }}" method="POST"
       enctype="multipart/form-data">
-      <h2 class="text-center">Maintain {{ collection_meta['title'] }}</h2>
-      <!-- description -->
+      <h2 class="text-center">Maintain {{ entity_meta['title'] }}</h2>
+      <!-- input fields -->
+      {% for field in entity_meta['fields'] %}
       <div class="form-outline">
-        <input type="text" class="form-control" name="description" id="description" minlength="3" maxlength="25"
-          value="{{ last_entity['description'] }}">
-        <label for="description" class="form-label">Description</label>
+        <input type="{{ field['name'] }}" class="form-control" id="{{ field['name'] }}" {{ field['attributes'] }}
+               name="{{ field['name'] }}" value="{{ last_record[field['name']] }}">
+        <label for="{{ field['name'] }}" class="form-label">{{ field['heading'] }}</label>
       </div>
       <br>
-      <!-- icon -->
-      <div class="form-outline">
-        <input type="text" class="form-control" name="icon" id="icon" value="{{ last_entity['icon'] }}">
-        <label for="icon" class="form-label">Font Awsome Icon</label>
-      </div>
+      {% endfor %}
       <!-- submit button -->
       <button type="submit" class="btn btn-primary offset-1 col-10 shadow-2-strong my-3">
         <i class="fas {% if update==True %}fa-edit{% else %}fa-plus-square{% endif %} fa-2x ms-3"></i>
@@ -30,28 +27,30 @@
     </form>
   </div>
 
-  {% if entities %}
+  {% if records %}
   <div class="row m-0 p-0">
     <div class="card col-12 offset-md-2 col-md-8 offset-lg-3 col-lg-6 my-3">
       <table class="table">
         <tr>
-          <th>Description</th>
-          <th>Font Awsome Icon</th>
+          {% for field in entity_meta['fields'] %}
+          <th>{{ field['heading'] }}</th>
+          {% endfor %}
           <th class="text-center">Actions</th>
         </tr>
 
-        {% for entity in entities %}
+        {% for record in records %}
         <tr>
-          <td>{{ entity['description'] }}</td>
+          {% for field in entity_meta['fields'] %}
           <td>
-            <i class="{{ entity['icon'] }} fa-2x"></i>
-            {{ entity['icon'] }}
+            {% if field['name']=='icon' %}<i class="{{ record['icon'] }} fa-2x"></i>{% endif %}
+            {{ record[field['name']] }}
           </td>
+          {% endfor %}
           <td class="text-center">
-              <a href="{{ url_for('update_entity', collection_name=collection_name, entity_id=entity['_id']) }}">
+              <a href="{{ url_for('update_record', collection_name=collection_name, record_id=record['_id']) }}">
                 <i class="fas fa-edit fa-lg ms-1" data-mdb-toggle="tooltip" data-mdb-placement="left" title="Edit"></i>
               </a>
-              <a href="{{ url_for('delete_entity', collection_name=collection_name, entity_id=entity['_id']) }}" data-mdb-toggle="modal" data-mdb-target="#modal-confirm">
+              <a href="{{ url_for('delete_record', collection_name=collection_name, record_id=record['_id']) }}" data-mdb-toggle="modal" data-mdb-target="#modal-confirm">
                 <i class="fas fa-trash-alt fa-lg" data-mdb-toggle="tooltip" data-mdb-placement="right" title="Delete"></i>
               </a>
           </td>
