refactor entity_name constant inot an app parameter

--- a/templates/maintain.html
+++ b/templates/maintain.html
@@ -47,10 +47,10 @@
           </td>
           {% endfor %}
           <td class="text-center">
-              <a href="{{ url_for('update_record', collection_name=collection_name, record_id=record['_id']) }}">
+              <a href="{{ url_for('update_record', collection_name=fieldcatalog['collection_name'], record_id=record['_id']) }}">
                 <i class="fas fa-edit fa-lg ms-1" data-mdb-toggle="tooltip" data-mdb-placement="left" title="Edit"></i>
               </a>
-              <a href="{{ url_for('delete_record', collection_name=collection_name, record_id=record['_id']) }}" data-mdb-toggle="modal" data-mdb-target="#modal-confirm">
+              <a href="{{ url_for('delete_record', collection_name=fieldcatalog['collection_name'], record_id=record['_id']) }}" data-mdb-toggle="modal" data-mdb-target="#modal-confirm">
                 <i class="fas fa-trash-alt fa-lg" data-mdb-toggle="tooltip" data-mdb-placement="right" title="Delete"></i>
               </a>
           </td>
