--- a/templates/maintain.html
+++ b/templates/maintain.html
@@ -126,7 +126,7 @@
         <h5 class="modal-title" id="modal-confirm-title">Confirm deletion</h5>
         <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body">This operation will remove the selected entity from database without checking if any record is still having it.</div>
+      <div class="modal-body">This operation will remove the selected record from database without checking if any record still has it.</div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Cancel</button>
         <button type="button" class="btn btn-danger" data-mdb-dismiss="modal" formMethod='POST'>Delete</button>
